<resources>

    <string name="app_name">Ground Station</string>
    <string name="action_settings">Settings</string>
    <string name="label_destination">Destination:</string>
    <string name="hint_destination">Destination</string>
    <string name="label_message">Message:</string>
    <string name="hint_command">Command</string>
    <string name="label_send">Send</string>
    <string name="label_p">P:</string>
    <string name="label_i">I:</string>
    <string name="label_d">D:</string>
    <string name="label_trim">Trim</string>
    <string name="label_sendWP">Send Waypoint</string>
    <string name="label_prefix">Prefix:</string>
    <string name="prefix">#!autopilot</string>

</resources>
