<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- 
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_destination" />
      	-->
    
    <EditText android:id="@+id/destination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_destination"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/command"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.58"
            android:hint="@string/hint_command"
            android:inputType="numberDecimal"
            android:maxLines="10"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/send_cmd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_send" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/default_spacing"
            android:text="@string/label_p" />

	    <EditText
	        android:id="@+id/p_edit"
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.20"
	        android:ems="10"
	        android:inputType="numberDecimal" />
	    
	    <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/default_spacing"
            android:text="@string/label_i" />

	    <EditText
	        android:id="@+id/i_edit"
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.26"
	        android:ems="10"
	        android:inputType="numberDecimal" />
	    
	    <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/default_spacing"
            android:text="@string/label_d" />

	    <EditText
	        android:id="@+id/d_edit"
	        android:layout_width="40dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.26"
	        android:ems="10"
	        android:inputType="numberDecimal" />

	    <Button
	        android:id="@+id/send_gains"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_send" />
	  
	</LinearLayout>
	
    <Button
        android:id="@+id/trim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_trim" />
    
    <Button
        android:id="@+id/send_wayPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sendWP" />
    
</LinearLayout>
